{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 33,
  "lineage": "0cfeeee4-11cb-058a-0cef-7cf68dbeef53",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "devops_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:461829972849:internet-gateway/igw-026db2303d1480a66",
            "id": "igw-026db2303d1480a66",
            "owner_id": "461829972849",
            "tags": {
              "Name": "devops_IGW"
            },
            "tags_all": {
              "Name": "devops_IGW"
            },
            "vpc_id": "vpc-09dbf8ba6c25a7e54"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ealb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:461829972849:loadbalancer/app/devops-sg-ASG-EALB/5b419f1ab6d69850",
            "arn_suffix": "app/devops-sg-ASG-EALB/5b419f1ab6d69850",
            "dns_name": "devops-sg-ASG-EALB-668285853.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:461829972849:loadbalancer/app/devops-sg-ASG-EALB/5b419f1ab6d69850",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-sg-ASG-EALB",
            "security_groups": [
              "sg-0028a8985c26acbe9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0184a1f207a1ec812"
              },
              {
                "subnet_id": "subnet-04e79d570b20dbcc6"
              },
              {
                "subnet_id": "subnet-08d74d422eac1e78f"
              }
            ],
            "subnets": [
              "subnet-0184a1f207a1ec812",
              "subnet-04e79d570b20dbcc6",
              "subnet-08d74d422eac1e78f"
            ],
            "tags": {
              "name": "devops_External_ALB"
            },
            "tags_all": {
              "name": "devops_External_ALB"
            },
            "vpc_id": "vpc-09dbf8ba6c25a7e54",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_vpc.devops_vpc",
            "aws_security_group.ealb_sg",
            "aws_subnet.devops-pub-1a",
            "aws_subnet.devops-pub-1b",
            "aws_subnet.devops-pub-1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:461829972849:listener/app/devops-sg-ASG-EALB/5b419f1ab6d69850/eb7c57378a2c230a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:461829972849:targetgroup/devops-sg-Int-ALB-TG-App1/4bf99416b69fa4be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:461829972849:listener/app/devops-sg-ASG-EALB/5b419f1ab6d69850/eb7c57378a2c230a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:461829972849:loadbalancer/app/devops-sg-ASG-EALB/5b419f1ab6d69850",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.devops-pub-1c",
            "aws_vpc.devops_vpc",
            "aws_lb.ealb",
            "aws_lb_target_group.external_alb_tg_app1",
            "aws_security_group.ealb_sg",
            "aws_subnet.devops-pub-1a",
            "aws_subnet.devops-pub-1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "external_alb_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:461829972849:targetgroup/devops-sg-Int-ALB-TG-App1/4bf99416b69fa4be",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:461829972849:listener-rule/app/devops-sg-ASG-EALB/5b419f1ab6d69850/eb7c57378a2c230a/ed8a569537925290",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app1/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:461829972849:listener-rule/app/devops-sg-ASG-EALB/5b419f1ab6d69850/eb7c57378a2c230a/ed8a569537925290",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:461829972849:listener/app/devops-sg-ASG-EALB/5b419f1ab6d69850/eb7c57378a2c230a",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ealb_sg",
            "aws_subnet.devops-pub-1a",
            "aws_subnet.devops-pub-1b",
            "aws_subnet.devops-pub-1c",
            "aws_vpc.devops_vpc",
            "aws_lb.ealb",
            "aws_lb_listener.external_alb_listener",
            "aws_lb_target_group.external_alb_tg_app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external_alb_tg_app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:461829972849:targetgroup/devops-sg-Int-ALB-TG-App1/4bf99416b69fa4be",
            "arn_suffix": "targetgroup/devops-sg-Int-ALB-TG-App1/4bf99416b69fa4be",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:461829972849:targetgroup/devops-sg-Int-ALB-TG-App1/4bf99416b69fa4be",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "devops-sg-Int-ALB-TG-App1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "devops_Ext_ALB_TG_App1"
            },
            "tags_all": {
              "name": "devops_Ext_ALB_TG_App1"
            },
            "target_type": "instance",
            "vpc_id": "vpc-09dbf8ba6c25a7e54"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "devops_pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:461829972849:route-table/rtb-000ce51e5f17dd56d",
            "id": "rtb-000ce51e5f17dd56d",
            "owner_id": "461829972849",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026db2303d1480a66",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops_Public_Route_Table"
            },
            "tags_all": {
              "Name": "devops_Public_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09dbf8ba6c25a7e54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.devops_internet_gateway",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops_table_associatio_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060ece145b3e19e42",
            "route_table_id": "rtb-000ce51e5f17dd56d",
            "subnet_id": "subnet-04e79d570b20dbcc6"
          },
          "dependencies": [
            "aws_internet_gateway.devops_internet_gateway",
            "aws_route_table.devops_pub_route_table",
            "aws_subnet.devops-pub-1a",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops_table_association_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01407c0ee11e3b83b",
            "route_table_id": "rtb-000ce51e5f17dd56d",
            "subnet_id": "subnet-08d74d422eac1e78f"
          },
          "dependencies": [
            "aws_internet_gateway.devops_internet_gateway",
            "aws_route_table.devops_pub_route_table",
            "aws_subnet.devops-pub-1b",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "devops_table_association_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4aa14af705a50bb",
            "route_table_id": "rtb-000ce51e5f17dd56d",
            "subnet_id": "subnet-0184a1f207a1ec812"
          },
          "dependencies": [
            "aws_internet_gateway.devops_internet_gateway",
            "aws_route_table.devops_pub_route_table",
            "aws_subnet.devops-pub-1c",
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:461829972849:security-group/sg-0ad987ae2c811ae8c",
            "description": "Allow HTTP inbound connections",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad987ae2c811ae8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asg_web_sg",
            "name_prefix": "",
            "owner_id": "461829972849",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops_SG_Web_Security_Group"
            },
            "tags_all": {
              "Name": "devops_SG_Web_Security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-09dbf8ba6c25a7e54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:461829972849:security-group/sg-054ad9ab608b95b01",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054ad9ab608b95b01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20211021121541221800000003",
            "name_prefix": "terraform-",
            "owner_id": "461829972849",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops_SG"
            },
            "tags_all": {
              "Name": "devops_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09dbf8ba6c25a7e54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ealb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:461829972849:security-group/sg-0028a8985c26acbe9",
            "description": "load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0028a8985c26acbe9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-sg-Ext-LB-SG",
            "name_prefix": "",
            "owner_id": "461829972849",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops_Ent_LB_SG"
            },
            "tags_all": {
              "Name": "devops_Ent_LB_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09dbf8ba6c25a7e54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:461829972849:security-group/sg-0f1b44bd9d0e5dfdb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1b44bd9d0e5dfdb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "mysql-security-group",
            "name_prefix": "",
            "owner_id": "461829972849",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09dbf8ba6c25a7e54"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-prv-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:461829972849:subnet/subnet-0b9d2c70da321d16e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0b9d2c70da321d16e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461829972849",
            "tags": {
              "Name": "devops_private_subnet_1a"
            },
            "tags_all": {
              "Name": "devops_private_subnet_1a"
            },
            "vpc_id": "vpc-09dbf8ba6c25a7e54"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-pub-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:461829972849:subnet/subnet-04e79d570b20dbcc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04e79d570b20dbcc6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461829972849",
            "tags": {
              "Name": "devops_public_subnet_1a"
            },
            "tags_all": {
              "Name": "devops_public_subnet_1a"
            },
            "vpc_id": "vpc-09dbf8ba6c25a7e54"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-pub-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:461829972849:subnet/subnet-08d74d422eac1e78f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-08d74d422eac1e78f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461829972849",
            "tags": {
              "Name": "devops_public_subnet_1b"
            },
            "tags_all": {
              "Name": "devops_public_subnet_1b"
            },
            "vpc_id": "vpc-09dbf8ba6c25a7e54"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "devops-pub-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:461829972849:subnet/subnet-0184a1f207a1ec812",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0184a1f207a1ec812",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "461829972849",
            "tags": {
              "Name": "devops_public_subnet_1c"
            },
            "tags_all": {
              "Name": "devops_public_subnet_1c"
            },
            "vpc_id": "vpc-09dbf8ba6c25a7e54"
          },
          "dependencies": [
            "aws_vpc.devops_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:461829972849:vpc/vpc-09dbf8ba6c25a7e54",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01b3191921ae5c175",
            "default_route_table_id": "rtb-0c79cc039b7aff647",
            "default_security_group_id": "sg-07538b8d55eeb66f5",
            "dhcp_options_id": "dopt-38c4ce50",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09dbf8ba6c25a7e54",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c79cc039b7aff647",
            "owner_id": "461829972849",
            "tags": {
              "Name": "DevOps_VPC_Singapore"
            },
            "tags_all": {
              "Name": "DevOps_VPC_Singapore"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}